--- a/PIM/assets/navbar.css
+++ b/PIM/assets/navbar.css
@@ -2,38 +2,48 @@
     top: 0;
     left: 0;
     height: 100%; /* Ocupa toda a altura da tela */
-    width: 200px; /* Largura da navbar */
-    background-color: #333;
-    color: white;
+    width: 50%; /* Largura da navbar */
+    color: rgb(39, 39, 39);
     display: flex;
-    flex-direction: column; /* Organiza os itens verticalmente */
     align-items: flex-start;
-    padding-top: 20px;
+    padding-top: 5px;
+    justify-content: space-evenly;
+}
+nav {
+    background-color: transparent;
+    box-shadow: none;
 }
 
-li.li-bar {
+h5.li-bar {
     margin: 20px;
-    font-size: large;
+    font-size: 20px;
 }
 
 
 /* Estilo dos links de navegação */
 .navbar a {
-    color: white;
+    color: rgb(50, 50, 50);
     text-decoration: none;
     padding: 2px;
     text-align: left;
     width: 100%;
-    transition: background 0.3s;    
+    border-radius: 5px;
+    transition: margin 0.3s, background-color 0.3s;
 }
 
 /* Efeito de hover nos links */
 .navbar a:hover {
-    background-color: #555;
+    background-color: #979797;
+    
+    margin: 8px;
 }
 
 /* Conteúdo principal da página */
 .content {
     margin-right: 220px; /* Deixa espaço para a navbar */
     padding: 20px;
+}
+
+.header-systemize {
+    display: flex;
 }
